# aba-tool

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INSTALL.md  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: ENVIRONMENT_SETUP.md
scripts/: create-production-branch.sh  create-release.sh  verify-setup.sh
src/: config.py  exceptions.py  models.py
src/api/: google_maps.py
src/services/: analysis.py  async_bridge.py  async_competitor_search.py  batch_validation.py  competitor_search.py  geocoding.py  location_csv_parser.py
src/ui/: components.py
src/utils/: text.py
tests/: test_csv_processing.py  test_models.py  test_services_integration.py
